part1/1_12/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project-app
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 80 # react app served by nginx
